# bin-ai-tech-aggregator

./: .gitignore  LICENSE  README.md  TODO.md  agents.md
backend/: .env.example  JAVA_TO_PYTHON_GUIDE.md  demo_crawler_service.py  demo_llm_pipeline.py  demo_send_feishu.py  demo_twitterapi_auth.py  init_db.py  main.py  pyproject.toml  seed_data.py
backend/core/: __init__.py  config.py  logging.py  request_context.py  timezone.py
backend/db/: base.py  init_db.py  seed.py  session.py
backend/models/: __init__.py  content_ai_analysis.py  content_item.py  enums.py  llm_call_log.py  monitor_source.py  push_channel.py  push_log.py  push_log_item.py  source_channel_binding.py
backend/routers/: __init__.py  channels.py  common.py  contents.py  dashboard.py  jobs.py  logs.py  source_channel_bindings.py  sources.py  system.py
backend/schemas/: __init__.py  api.py  content.py  crawler.py  llm.py  monitor_source.py  push_channel.py  push_log.py  source_channel_binding.py
backend/services/: __init__.py  content_filter_service.py  crawler_service.py  llm_service.py  notify_service.py  pipeline_service.py  scheduler_service.py  scoring_service.py  twitterapi_client.py
backend/tests/: test_api_phase4.py  test_crawler_service.py  test_llm_service.py  test_notify_service.py  test_pipeline_service.py
docs/: COMMANDS.md  PRD.md  STANDARDS.md  TECH_DESIGN.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: channels.js  contents.js  dashboard.js  http.js  jobs.js  logs.js  sourceChannelBindings.js  sources.js
(+14 files in other folders)
