[project]
name = "bin-ai-tech-aggregator-backend"
version = "0.1.0"
description = "Backend for AI tech aggregator"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "fastapi>=0.110",
    "greenlet>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
    "zai-sdk>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
